--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="section">
         <h2>Contact</h2>
         <p>Email: mejestichusky@gmail.com</p>
-        <p>Telegram: Coming Soon</p>
+        <a href="https://t.me/MejesticHusky" class="btn">Join Telegram</a>
     </div>
 </body>
 </html>
